--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,10 +1,9 @@
 name: E2E Tests
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main, canary ]
+    paths-ignore:
+      - '**/*.md'
 
 jobs:
   e2e-test:
